--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color:white;
+    /* background-color:white; */
     z-index: 1000;
    
 }
